--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 #
-#Wed Aug 03 01:39:06 EEST 2016
-version.build=03
+#Sun May 07 19:47:39 EEST 2017
+version.build=04
 mavenpass=***REMOVED***
 curseforge_key=***REMOVED***
 mavenuser=maven_user
@@ -8,4 +8,4 @@ version.minor=3
 version.mc=1.7.10
 version.major=12
 version.super=0
-mavenurl=scp://***REMOVED***/home/maven_user/maven
+mavenurl=scp\://***REMOVED***/home/maven_user/maven
