Latest forgegradle setup and pointed at forgeversion 1.11.2-13.20.0.2296

--- a/build.properties
+++ b/build.properties
@@ -9,3 +9,4 @@ version.mc=1.7.10
 version.major=12
 version.super=0
 mavenurl=scp\://***REMOVED***/home/maven_user/maven
+mcp_mappings_version = snapshot_20161220
