--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-ext.forgeversion     = "1.7.10-10.13.3.1428-1.7.10"
+ext.forgeversion     = "1.11.2-13.20.0.2296"
 group                = "com.xcompwiz.mystcraft" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 ext.archivesBaseName = "mystcraft"
 ext.nameCased        = "Mystcraft"
@@ -35,9 +35,14 @@ buildscript {
 			name = "sonatype"
 			url = "https://oss.sonatype.org/content/repositories/snapshots/"
 		}
+		maven {
+			name = "CurseGradle"
+			url = "https://plugins.gradle.org/m2/"
+		}
 	}
 	dependencies {
-		classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+		classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+		classpath 'gradle.plugin.com.matthewprenger:CurseGradle:1.0.8'
 	}
 }
 
@@ -58,8 +63,9 @@ repositories {
 	}
 }
 
-apply plugin: 'curseforge'
-apply plugin: 'forge'
+apply plugin: 'maven'
+apply plugin: 'com.matthewprenger.cursegradle'
+apply plugin: 'net.minecraftforge.gradle.forge'
 
 if (file('locations.gradle').exists()) {
 	apply from: 'locations.gradle'
@@ -84,6 +90,9 @@ minecraft {
 	runDir = "../run/client"
 
 	replace "@VERSION@", project.version
+
+    // Specify the mcp mappings to use
+    mappings = config.mcp_mappings_version
 }
 
 processResources
@@ -181,14 +190,14 @@ task("markChangelog") {
 	mustRunAfter updateChangelog
 }
 
-project.tasks.curse.dependsOn "markChangelog"
+project.tasks.curseforge.dependsOn "markChangelog"
 
 task "deploy" // creates it for later
 task "deployjar" // creates it for later
 
 project.tasks.deploy.dependsOn project.tasks.deployjar
 
-project.tasks.deployjar.dependsOn project.tasks.reobf
+project.tasks.deployjar.dependsOn project.tasks.jar
 project.tasks.deployjar.dependsOn project.tasks.devJar
 project.tasks.deployjar.dependsOn project.tasks.apiJar
 
@@ -198,7 +207,7 @@ jarDeploys.each { name, dir ->
 
 		from {project.tasks.jar.getArchivePath()} // just release jar
 		into dir
-		dependsOn "reobf"
+		dependsOn "jar"
 	}
 	project.tasks.deployjar.dependsOn deployer
 
@@ -307,25 +316,29 @@ types.eachWithIndex { type, index ->
 	project.tasks.compileApiJava.mustRunAfter incrementer
 }
 
-curse {
+curseforge {
 	apiKey = config.curseforge_key // saved in my properties file. http://minecraft.curseforge.com/my-api-tokens
-	projectId = project.curseId
-	releaseType = project.curseReleaseType //The release type must be either 'alpha', 'beta', or 'release'
+	project {
+		id = project.curseId
+		releaseType = project.curseReleaseType //The release type must be either 'alpha', 'beta', or 'release'
 
-	changelog = project.publishChangelog.text
+		changelog = project.publishChangelog.text
 
-	// the default obfuscated jar is uploaded by default
-	// artifact = project.file("some/jar/to/upload.jar")
-	if (project.curseIncludeAPI) {
-		additionalArtifact {project.tasks.apiJar.getArchivePath()}
+		mainArtifact jar
+
+		// the default obfuscated jar is uploaded by default
+		// artifact = project.file("some/jar/to/upload.jar")
+		if (project.curseIncludeAPI) {
+			addArtifact {project.tasks.apiJar.getArchivePath()}
+		}
+		if (project.curseIncludeDev) {
+			addArtifact {project.tasks.devJar.getArchivePath()}
+		}
+
+		// allows you to add extra compatible MC versions. The one specified in the minecraft{} block is used by default.
+		// addGameVersion "1.7.1"
+		// addGameversion "1.7.0", "1.7.4"
 	}
-	if (project.curseIncludeDev) {
-		additionalArtifact {project.tasks.devJar.getArchivePath()}
-	}
-
-	// allows you to add extra compatible MC versions. The one specified in the minecraft{} block is used by default.
-	// addGameVersion "1.7.1"
-	// addGameversion "1.7.0", "1.7.4"
 }
 
 // deployment stuff
