--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
 #
-#Sun May 07 19:47:39 EEST 2017
-version.build=04
-version.minor=3
+#Sun Jul 16 02:20:40 EEST 2017
 version.mc=1.11.2
-version.major=12
+version.minor=0
+version.build=00
 version.super=0
-mcp_mappings_version = snapshot_20161220
+mcp_mappings_version=snapshot_20161220
+version.major=13
