--- a/build.gradle
+++ b/build.gradle
@@ -328,6 +328,7 @@ types.eachWithIndex { type, index ->
 		srcJar.version = "${project.minecraft.version}-${project.version}"
 		project.tasks.sourceMainJava.replace "@VERSION@", project.version
 		uploadArchives.repositories.mavenDeployer.pom.version = project.version
+		discord.requestBody = [content: "${project.nameCased} " + "${-> project.version}" + " is uploading to CurseForge\n```" + project.publishChangelog.text + " ```"]
 	}
 
 	task("deploy-$type") {
@@ -372,7 +373,7 @@ curseforge {
 task discord(type: org._10ne.gradle.rest.RestTask) {
 	httpMethod = 'post'
 	uri = pass.discordWebhookTest
-	requestBody = [content: "Mystcraft " + "${-> project.version}" + " is uploading to CurseForge\n```" + project.publishChangelog.text + " ```"]
+	requestBody = [content: "${project.nameCased} " + "${-> project.version}" + " is uploading to CurseForge\n```" + project.publishChangelog.text + " ```"]
 	contentType = groovyx.net.http.ContentType.JSON
 }
 
