--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
 #
-#Tue Oct 23 23:49:24 EEST 2018
-version.mc=1.12
+#Fri Nov 30 21:13:11 EET 2018
 version.minor=7
-version.build=01
+version.mc=1.12
+version.build=02
 version.super=0
 mcp_mappings_version=snapshot_20180415
 version.major=13
