Build numbers from 15.04.2019

--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
 #
-#Fri Nov 30 21:13:11 EET 2018
-version.minor=7
+#Mon Apr 15 23:11:56 EEST 2019
 version.mc=1.12
-version.build=02
+version.minor=7
+version.build=03
 version.super=0
 mcp_mappings_version=snapshot_20180415
 version.major=13
